syntax = "proto3";

service Config {
    rpc Create (CreateRequest) returns (CreateResponse) {
    }
    rpc Update (UpdateRequest) returns (UpdateResponse) {
    }
    rpc Delete (DeleteRequest) returns (DeleteResponse) {
    }
    rpc Search (SearchRequest) returns (SearchResponse) {
    }
    rpc Read (ReadRequest) returns (ReadResponse) {
    }
    rpc AuditLog (AuditLogRequest) returns (AuditLogResponse) {
    }
    rpc Watch (WatchRequest) returns (stream WatchResponse) {
    }
}

message ChangeSet {
    bytes data = 1;
    string checksum = 2;
    string format = 3;
    string source = 4;
    int64 timestamp = 5;
}

message Change {
    string id = 1;
    string path = 2;
    string author = 3;
    string comment = 4;
    int64 timestamp = 5;
    ChangeSet changeSet = 6;
}

message ChangeLog {
    string action = 1;
    Change change = 2;
}

message CreateRequest {
    Change change = 1;
}

message CreateResponse {
}

message UpdateRequest {
    Change change = 1;
}

message UpdateResponse {
}

message DeleteRequest {
    Change change = 1;
}

message DeleteResponse {
}

message ReadRequest {
    string id = 1;
    string path = 2;
}

message ReadResponse {
    Change change = 1;
}

message SearchRequest {
    string id = 1;
    string author = 2;
    int64 limit = 3;
    int64 offset = 4;
}

message SearchResponse {
    repeated Change configs = 1;
}

message WatchRequest {
    string id = 1;
}

message WatchResponse {
    string id = 1;
    ChangeSet changeSet = 2;
}

message AuditLogRequest {
    // from unix timestamp
    int64 from = 1;
    // to unix timestamp
    int64 to = 2;
    // limit number items
    int64 limit = 3;
    // the offset
    int64 offset = 4;
    // reverse the order
    bool reverse = 5;
    // total
    int64 total = 6;
}

message AuditLogResponse {
    repeated ChangeLog changes = 1;
}
